[gd_scene load_steps=9 format=3 uid="uid://b10mqefnp705t"]

[ext_resource type="Script" path="res://scripts/Fishing/fishing.gd" id="1_2xsly"]
[ext_resource type="Texture2D" uid="uid://5erwrltlxslf" path="res://assets/Fishing/Microgame_Fishing_Background.png" id="2_m4ydx"]
[ext_resource type="Texture2D" uid="uid://bdwq8rxaikt6y" path="res://assets/Fishing/Microgame_Fishing_Bobber.png" id="3_q7nvq"]
[ext_resource type="PackedScene" uid="uid://6xyikmddaqrn" path="res://scenes/Fishing/FishSilhouette.tscn" id="4_muc3y"]

[sub_resource type="Animation" id="Animation_kwmtc"]
resource_name = "Bobber_Bob"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Bobber:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7, 1.5, 2.2, 3),
"transitions": PackedFloat32Array(0, 0, 0, 0, 0),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -1), Vector2(0, 0), Vector2(0, 1), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_5gbhe"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Bobber:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_d72v4"]
resource_name = "Bobber_Hold"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Bobber:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(0, 0),
"update": 0,
"values": [Vector2(0, -1), Vector2(0, -1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7c0v1"]
_data = {
"Bobber_Bob": SubResource("Animation_kwmtc"),
"Bobber_Hold": SubResource("Animation_d72v4"),
"RESET": SubResource("Animation_5gbhe")
}

[node name="Fishing" type="Node2D" node_paths=PackedStringArray("debug_square")]
script = ExtResource("1_2xsly")
debug_square = NodePath("Bobber")

[node name="BG" type="Sprite2D" parent="."]
position = Vector2(960, 540)
scale = Vector2(7.5, 7.5)
texture = ExtResource("2_m4ydx")

[node name="Bobber" type="Sprite2D" parent="."]
position = Vector2(960, 510)
scale = Vector2(7.5, 7.5)
texture = ExtResource("3_q7nvq")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Bobber"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_7c0v1")
}
autoplay = "Bobber_Bob"

[node name="InputButton" type="Sprite2D" parent="."]
z_index = 4
position = Vector2(700, 300)
scale = Vector2(0.5, 0.5)

[node name="FishSilhouette" parent="." instance=ExtResource("4_muc3y")]
position = Vector2(662, 769)

[node name="FishSilhouette2" parent="." instance=ExtResource("4_muc3y")]
position = Vector2(1247, 893)
flip_x = true

[node name="BobberTimer" type="Timer" parent="."]
one_shot = true

[node name="FishGetAwayTimer" type="Timer" parent="."]
one_shot = true

[node name="TotalTime" type="Timer" parent="."]

[connection signal="timeout" from="BobberTimer" to="." method="_on_bobber_timer_timeout"]
[connection signal="timeout" from="FishGetAwayTimer" to="." method="_on_fish_get_away_timer_timeout"]
[connection signal="timeout" from="TotalTime" to="." method="_on_total_time_timeout"]
